discussion/kv_engine/174754/174754_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39344: Rename createCheckpointItem() into createCheckpointMetaItem()

And remove duplicate queue_op checks.

Change-Id: I3dbcd90a95b1fc746ebc1122c71b4c09381bb5c5

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-05-12 09:30:58.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-12 10:06:08.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17450/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17450/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10:
error: "hdr_histogram.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17450/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27616/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27616/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16471/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46098/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38717/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7159/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7064/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19216/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20240/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18421/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19561/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-12 10:50:15.000000000
Message: 
Patch Set 1:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17452/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17452/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10:
error: "hdr_histogram.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17452/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16471/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46098/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38717/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7159/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7064/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19216/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20240/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18421/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19561/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27618/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-12 12:59:51.000000000
Message: 
Patch Set 1:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17457/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17457/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10:
error: "hdr_histogram.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17457/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16471/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46098/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38717/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7159/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7064/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19216/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20240/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18421/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19561/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27618/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2022-05-12 16:53:00.000000000
Message: 
Patch Set 1: Verified+1

(1 comment)
File Comment: /PATCHSET_LEVEL -> Unrelated at http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17457/
----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2022-05-12 16:53:02.000000000
Message: 
Removed Verified-1 by <GERRIT_ACCOUNT_1000011>

----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2022-05-12 16:53:04.000000000
Message: 
Removed Code-Review-1 by <GERRIT_ACCOUNT_1000011>

----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2022-05-13 08:15:56.000000000
Message: 
Patch Set 1: Code-Review+2

(1 comment)
Line:806, engines/ep/src/checkpoint_manager.h -> Nit. My personal opinion is that such a comment doesn't really add much value (From the name it is pretty obvious what it does).. The only interesting piece is that it throws an exception and for what reason).. but from looking at the code it may also throw std::bad_alloc ..

----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2022-05-13 08:46:54.000000000
Message: 
Patch Set 1:

(1 comment)
Line:806, engines/ep/src/checkpoint_manager.h -> Ack.
I'm touching again this code later, I ll save this patch another CV run.

----------------------------------------------------------------------------------------------------------------------
